# Open-Wrist-Band

./: LICENSE  README.md
Hardware/: README.md
Hardware/3d models/: Case_Body.stl  Case_Lid.stl  Electrode.stl  Glue_Support.stl
Hardware/PCB/Altium/: MCU.SchDoc  Main_Sheet.SchDoc  PCB1.PcbDoc  Power.SchDoc  Sensors.SchDoc  WWM.PrjPcb  WWM.PrjPcbStructure
Hardware/PCB/Altium/Project Outputs for Free Documents/: Status Report.Txt
Hardware/PCB/Altium/Project Outputs for Free Documents/GerberX2/: PCB1-macro.APR_LIB  PCB1.EXTREP  PCB1.REP  PCB1.apr  (+14 more)
Hardware/PCB/Altium/Project Outputs for WWM/: PCB1-RoundHoles-Plated.TXT  PCB1-macro.APR_LIB  PCB1.DRR  PCB1.EXTREP  PCB1.G1  PCB1.G2  PCB1.GBL  PCB1.GBO  PCB1.GBP  PCB1.GBS  PCB1.GM  PCB1.GTL  PCB1.GTO  PCB1.GTP  PCB1.GTS  PCB1.REP  PCB1.apr  Status Report.Txt
Hardware/PCB/Fabrication files/: BOM.csv  CPL.csv
Software/: README.md
Software/Desktop software/: Analysing_Green_LED_data.ipynb  Analysing_Red_IR_LED_data.ipynb  README.md  data_parse.py  data_recieve.py  m_green.csv  m_red_IR.csv
Software/Embedded software/: CMakeLists.txt  README.md  app.overlay  prj.conf  sample.yaml
Software/Embedded software/boards/SDU/Wristband/: Wristband.yaml  Wristband_defconfig  board.cmake  board.yml
Software/Embedded software/src/: shell.c  usb_drv.h
Software/Embedded software/sysbuild/: mcuboot.conf  mcuboot.overlay
Software/Embedded_software/: README.md  experimental_old_pm_static.yml
Software/Embedded_software/src/: as7058_drv.c  as7058_drv.h  as7058_typedefs.h  flash_drv.c  flash_drv.h  main.c  usb_drv.c
(+53 files in other folders)
